use aSub record to calculate the DAQ time from receiving PCI interrupt to completing waveform readout

--- a/ics710App/Db/ics710Card.template
+++ b/ics710App/Db/ics710Card.template
@@ -9,6 +9,7 @@ record(mbbo,"${Psy}-${Ssy}{${Dev}}Run:C${CARD}-SP")
    field(DTYP,"ics710")
    field(OUT,"@C${CARD} MRUN")
    field(PINI,"YES")
+   field(RVAL, "1")
    field(SCAN,"Passive")
    field(ZRVL,"0")
    field(ZRST,"Stopped")
