--- a/ics710App/src/Makefile
+++ b/ics710App/src/Makefile
@@ -29,6 +29,7 @@ ics710_SRCS += ics710DrvMbbo.cpp
 ics710_SRCS += ics710DevMbbo.cpp 
 ics710_SRCS += ics710DrvLongout.cpp
 ics710_SRCS += ics710DevLongout.cpp
+ics710_SRCS += ics710Asub.c
 # Build the main IOC entry point on workstation OSs.
 ics710_SRCS_DEFAULT += ics710Main.cpp
 
