garbage data problem is solved; initial record(longout,mbbo) value is obtained in 'ics710InitRecordSpecialized' routine instead of using PINI

--- a/ics710App/Db/ics710Card.template
+++ b/ics710App/Db/ics710Card.template
@@ -22,8 +22,9 @@ record(mbbo,"${Psy}-${Ssy}{${Dev}}Gain:C${CARD}-SP")
    field(DESC,"setGain")
    field(DTYP,"ics710")
    field(OUT,"@C${CARD} MGAI")
-   field(PINI,"YES")
-   field(RVAL, "0")
+   #initialize the RVAL in ics710DrvMbbo.cpp
+   #field(PINI,"YES")
+   #field(RVAL, "0")
    field(SCAN,"Passive")
    field(ZRVL,"0")
    field(ZRST,"10V")
@@ -65,8 +66,8 @@ record(mbbo,"${Psy}-${Ssy}{${Dev}}Filter:C${CARD}-SP")
    field(DESC,"setFilter")
    field(DTYP,"ics710")
    field(OUT,"@C${CARD} MFIL")
-   field(PINI,"YES")
-   field(RVAL, "10")
+   #field(PINI,"YES")
+   #field(RVAL, "10")
    field(SCAN,"Passive")
    field(ZRVL,"0")
    field(ZRST,"0Hz")
@@ -107,8 +108,8 @@ record(mbbo,"${Psy}-${Ssy}{${Dev}}Osr:C${CARD}-SP")
    field(DESC,"setOverSamplingRatio")
    field(DTYP,"ics710")
    field(OUT,"@C${CARD} MOSR")
-   field(PINI,"YES")
-   field(RVAL, "2")
+   #field(PINI,"YES")
+   #field(RVAL, "2")
    field(SCAN,"Passive")
    field(ZRVL,"0")
    field(ZRST,"Normal")
@@ -123,8 +124,8 @@ record(mbbo,"${Psy}-${Ssy}{${Dev}}Trigger:C${CARD}-SP")
    field(DESC,"setTrigger")
    field(DTYP,"ics710")
    field(OUT,"@C${CARD} MTRI")
-   field(PINI,"YES")
-   field(RVAL, "1")
+   #field(PINI,"YES")
+   #field(RVAL, "1")
    field(SCAN,"Passive")
    field(ZRVL,"0")
    field(ZRST,"Internal")
@@ -137,8 +138,8 @@ record(mbbo,"${Psy}-${Ssy}{${Dev}}AcqMode:C${CARD}-SP")
    field(DESC,"setAcquisitionMode")
    field(DTYP,"ics710")
    field(OUT,"@C${CARD} MACQ")
-   field(PINI,"YES")
-   field(RVAL, "1")
+   #field(PINI,"YES")
+   #field(RVAL, "1")
    field(SCAN,"Passive")
    field(ZRVL,"0")
    field(ZRST,"Continuous")
@@ -148,41 +149,38 @@ record(mbbo,"${Psy}-${Ssy}{${Dev}}AcqMode:C${CARD}-SP")
    field(TWST,"CaptureWithPreTrig")
 }
 
-#record(longout,"${Psy}-${Ssy}{${Dev}}TotalCh:C$(CARD)-SP")
-#{
-#   field(DESC,"setTotalChannel")
-#   field(DTYP,"ics710")
-#   field(OUT,"@C${CARD} LCHA")
-#   field(PINI,"YES")
-#   #field(RVAL, "8")
-#   field(SCAN,"Passive")
-#   field(DOL, "4")
-#   field(HOPR, "8")
-#   field(LOPR, "2")
-#   field(EGU, "channel")
-#}
+record(longout,"${Psy}-${Ssy}{${Dev}}TotalCh:C$(CARD)-SP")
+{
+   field(DESC,"setTotalChannel")
+   field(DTYP,"ics710")
+   field(OUT,"@C${CARD} LCHA")
+   #initialize the VAL(not DOL) in ics710DrvLongout.cpp
+   #field(PINI,"YES")
+   #field(DOL, "4")
+   field(HOPR, "8")
+   field(LOPR, "2")
+   field(EGU, "channel")
+}
 
-#record(longout,"${Psy}-${Ssy}{${Dev}}Samples:C$(CARD)-SP")
-#{
-#   field(DESC,"setSamples")
-#   field(DTYP,"ics710")
-#   field(OUT,"@C${CARD} LSAM")
+record(longout,"${Psy}-${Ssy}{${Dev}}Samples:C$(CARD)-SP")
+{
+   field(DESC,"setSamples")
+   field(DTYP,"ics710")
+   field(OUT,"@C${CARD} LSAM")
 #   field(PINI,"YES")
-#   field(SCAN,"Passive")
 #   field(DOL, "10000")
-#   field(HOPR, "200000")
-#   field(LOPR, "1")
-#   field(EGU, "samples")
-#}
+   field(HOPR, "200000")
+   field(LOPR, "1")
+   field(EGU, "samples")
+}
 
 record(longout,"${Psy}-${Ssy}{${Dev}}SampleRate:C$(CARD)-SP")
 {
    field(DESC,"setSamplingRate")
    field(DTYP,"ics710")
    field(OUT,"@C${CARD} LRAT")
-   field(PINI,"YES")
-   field(SCAN,"Passive")
-   field(DOL, "200")
+   #field(PINI,"YES")
+   #field(DOL, "200")
    field(HOPR, "216")
    field(LOPR, "1")
    field(EGU, "KHz")   
