improve *Asub.cpp to get 'card' and 'channel' information from the waveform record private(pics710RecPrivate->card);verify that high-pass filter(control.adc_hpfilter_enable) is not applicable for DC meaaurement

--- a/ics710App/Db/ics710Channel.template
+++ b/ics710App/Db/ics710Channel.template
@@ -79,6 +79,7 @@ record(aSub,"${Psy}-${Ssy}{${Dev}}Asub:Ch${CHANNEL}-aSub_")
     field (INAM,"ics710AsubInit")
     field (SNAM,"ics710AsubProcess")
     field (INPA, "${Psy}-${Ssy}{${Dev}}Offset:Ch${CHANNEL}-SP")
+    field (INPB, "${Psy}-${Ssy}{${Dev}}WfRawVolt:Ch${CHANNEL}-I")
     field (FTA, "DOUBLE")
     field (NOA, "1")
     field (OUTA, "${Psy}-${Ssy}{${Dev}}TrigRate:Ch${CHANNEL}-I_ PP")
@@ -133,7 +134,10 @@ record (ao, "${Psy}-${Ssy}{${Dev}}Offset:Ch${CHANNEL}-SP")
     field(DESC,"DC Offset")
     field(SCAN, "Passive")
     #field(PINI, "YES")
-    #field(RVAL, "0.046")
+    #for channle 1
+    field(VAL, "0.0481")
+    #for channle 2
+    #field(RVAL, "0.1730")
     field (PREC,"5")
     field(EGU,"Volts")
  }
